--- a/style-grid.css
+++ b/style-grid.css
@@ -1,11 +1,62 @@
 /* exercise 1 */
+.container1 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+}
+
 
 /* exercise 2 */
+.container2 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 20px;
+}
+
 
 /* exercise 3 */
+.container3 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+}
+.container3 .item-1{
+    grid-column: span 2;
+}
+
 
 /* exercise 4 */
+.container4 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+}
+.container4 .item-4{
+    grid-column-start: 2;
+    grid-row-start: 3;
+}
 
 /* exercise 5 */
-
+.container5 {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 20px;
+    grid-template-areas: 'header header'
+                        'main sidebar'
+                        'footer footer';
+}
+.container5 .item-1{
+    grid-area: header;
+}
+.container5 .item-2{
+    grid-area: main;
+}
+.container5 .item-3{
+    grid-area: sidebar;
+}
+.container5 .item-4{
+    grid-area: footer;
+}
 /* exercise 6 (optional) - follow the assigned YT video */
