--- a/style-grid.css
+++ b/style-grid.css
@@ -20,6 +20,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
+    gap: 20px;
 }
 .container3 .item-1{
     grid-column: span 2;
@@ -31,11 +32,16 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
+    gap: 20px;
+}
+.container4 .item-1{
+    grid-column: span 2;
 }
 .container4 .item-4{
     grid-column-start: 2;
     grid-row-start: 3;
 }
+
 
 /* exercise 5 */
 .container5 {
