--- a/style-grid.css
+++ b/style-grid.css
@@ -46,8 +46,8 @@
 /* exercise 5 */
 .container5 {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
     gap: 20px;
     grid-template-areas: 'header header'
                         'main sidebar'
